--- a/src/applications/combined-debt-portal/combined/sass/combined-debt-portal.scss
+++ b/src/applications/combined-debt-portal/combined/sass/combined-debt-portal.scss
@@ -1,4 +1,4 @@
-@import "~@department-of-veterans-affairs/formation/sass/shared-variables";
+@import "~@department-of-veterans-affairs/css-library/dist/tokens/scss/variables";
 
 h1:focus {
   outline: none !important;
@@ -26,7 +26,7 @@ h1:focus {
   }
 }
 
-@media (min-width: $medium-large-screen) {
+@media (min-width: $medium-screen) {
   .on-this-page-links {
     border: none;
     padding: 1em 1em 1em 0;
