Changed update mobile number to mailing address across the form and all instances

--- a/src/applications/_mock-form-ae-design-patterns/sass/custom.scss
+++ b/src/applications/_mock-form-ae-design-patterns/sass/custom.scss
@@ -25,3 +25,7 @@
     }
   }
 }
+
+[data-dd-action-name="street"] {
+
+margin:                                                                                                                                                                                                                                                                                                                                 }
