--- a/src/applications/_mock-form-ae-design-patterns/sass/custom.scss
+++ b/src/applications/_mock-form-ae-design-patterns/sass/custom.scss
@@ -27,5 +27,5 @@
 }
 
 [data-dd-action-name="street"] {
-
-margin:                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         }
+margin-bottom: 1rem;
+}
