--- a/src/platform/forms/sass/_m-schemaform.scss
+++ b/src/platform/forms/sass/_m-schemaform.scss
@@ -1,5 +1,6 @@
 // Style for schemaform
-@import "~@department-of-veterans-affairs/css-library/dist/stylesheets/mixins";
+@use "~@department-of-veterans-affairs/css-library/dist/stylesheets/mixins";
+
 .va-growable-background {
   padding: 1em;
   margin-bottom: 1em;
