Authed patterns/aw/159/form updates for orange task (#32570)
* feat: a server that manages servers...

* updated on post for active feature toggles

* display times for stdout and lifo display order

* process config

* add application selector with search

* async and rtk based app startup.

* update comment

* vadx state slice via redux toolkit, vadx reducer to redux store

* tweak to server logging

* form config updates

* dont mock auth in prod / staging, add margin to orange, async start comments

* Info section for personal info, auto fetch prefill on form pages if needed (wip)

* add contact info page, format phone util, mock prefill data, revise form schemas

* cleanup link, personal info, add debug component

* delete server manager idea for now, until I can address fixed exec and spawn calls

* substitute processConfig for now

* roll back using asyncStartApp bc breaking tests, sigh

* only call prefill for workaround in localhost

* remove convenience features due to e2e grumpiness

--- a/src/applications/_mock-form-ae-design-patterns/sass/custom.scss
+++ b/src/applications/_mock-form-ae-design-patterns/sass/custom.scss
@@ -4,6 +4,29 @@
   padding: 0.75rem 1.25rem;
 }
 
+// form panel is only 32em wide, so we need to override the default width
+// was originally set in the shame.scss file
+.form-panel {
+  min-width: 100%;
+}
+
 .nav-tabs li{
   flex: 1 1 auto;
+}
+
+// custom styles for the dev panel stdout
+.fade-enter {
+  opacity: 0 !important;
+}
+
+.fade-exit {
+  opacity: 1;
+}
+.fade-exit-active {
+  opacity: 0;
+  transition: opacity 300ms ease-in;
+}
+
+.fade-enter-done {
+  opacity: 1;
 }
