Update profile save button

--- a/src/platform/forms/sass/_m-schemaform.scss
+++ b/src/platform/forms/sass/_m-schemaform.scss
@@ -751,3 +751,8 @@ va-checkbox.statement-of-truth-va-checkbox::part(checkbox) {
 @include header-style("rjsf-wc-header--h2", $h2-font-size, $h3-font-size);
 @include header-style("rjsf-wc-header--h3", $h3-font-size, $h4-font-size);
 @include header-style("rjsf-wc-header--h4", $h4-font-size, $h5-font-size);
+
+/* Edit contact info save button */
+.va-profile-wrapper button[data-action="save-edit"] {
+  padding: 0.45rem 1.25rem;
+}
