Updated custom.scss to change mini-summary-card styling to use class instead of data-id

--- a/src/applications/_mock-form-ae-design-patterns/sass/custom.scss
+++ b/src/applications/_mock-form-ae-design-patterns/sass/custom.scss
@@ -20,7 +20,7 @@
 }
 }
 
-[data-testid="mini-summary-card"] {
+.contact-info-card {
   @include media($medium-screen) {
     width: 18.8rem;
     height: 8.8rem;
