Added e2e test for task gray

--- a/src/applications/_mock-form-ae-design-patterns/sass/custom.scss
+++ b/src/applications/_mock-form-ae-design-patterns/sass/custom.scss
@@ -37,6 +37,10 @@
   }
 }
 
+#form-26-1880 {
+  margin-top: 2rem;
+}
+
 div.progress-box.progress-box-schemaform > div.form-panel > div > va-card {
   width: 18.8rem;
 }
