--- a/src/applications/_mock-form-ae-design-patterns/sass/custom.scss
+++ b/src/applications/_mock-form-ae-design-patterns/sass/custom.scss
@@ -30,3 +30,8 @@
 .fade-enter-done {
   opacity: 1;
 }
+
+// fixes for patter 2 Orange task
+#root_view\:editNavigation-label {
+  display: none !important;
+}
