--- a/src/applications/personalization/review-information/sass/welcome-va-setup-review-information.scss
+++ b/src/applications/personalization/review-information/sass/welcome-va-setup-review-information.scss
@@ -4,3 +4,7 @@
 @import "~@department-of-veterans-affairs/css-library/dist/stylesheets/modules/m-modal";
 @import "~@department-of-veterans-affairs/css-library/dist/stylesheets/modules/m-omb-info";
 @import "../../../../platform/forms/sass/m-form-confirmation";
+
+.schemaform-sip-save-link {
+    display: none;
+}
