--- a/src/applications/_mock-form-ae-design-patterns/sass/custom.scss
+++ b/src/applications/_mock-form-ae-design-patterns/sass/custom.scss
@@ -69,3 +69,12 @@ margin-bottom: 1rem;
 #root_view\:editNavigation-label {
   display: none !important;
 }
+
+[data-location="2/task-orange/applicant-information"] {
+  .schemaform-chapter-progress {
+    padding-left: 0;
+    span {
+      font-size: 18px !important;
+    }
+  }
+}
