--- a/src/applications/gi/sass/partials/_gi-search-page.scss
+++ b/src/applications/gi/sass/partials/_gi-search-page.scss
@@ -234,7 +234,7 @@
       h4 {
         margin-top: 0;
         font-size: 1em;
-        font-family: $font-sans;
+        font-family: var(--font-source-sans);
       }
       h4 {
         padding-bottom: 0;
