added programs list page

--- a/src/applications/gi/sass/gi.scss
+++ b/src/applications/gi/sass/gi.scss
@@ -289,3 +289,10 @@
 .required-label {
   color: $color-red-dark;
 }
+.remove-bullets {
+  list-style: none;
+  padding-left: 0;
+}
+.list-item {
+  margin-bottom: 1rem;
+}
