refactor to va-modal

--- a/src/platform/site-wide/user-nav/sass/user-nav.scss
+++ b/src/platform/site-wide/user-nav/sass/user-nav.scss
@@ -69,100 +69,7 @@
   height: 42px;
 }
 
-#loginGovExperimentModal {
-  ul {
-    list-style: unset;
-    margin: unset;
-    margin-top: -1em;
-    padding: unset;
-    margin-inline-start: 2em;
-
-    li {
-      margin-bottom: 0;
-    }
-  }
-
-  .alert-actions {
-    margin: 10px 0 0;
-  }
-}
-
-span.sidelines {
-  position: relative;
-  z-index: 1;
-  overflow: hidden;
-  text-align: center;
-  width: 100%;
-  display: inline-block;
-
-  font-size: 1.15em;
-  font-weight: bold;
-
-  &:before,
-  &:after {
-    position: absolute;
-    top: 51%;
-    overflow: hidden;
-    width: 50%;
-    height: 2px;
-    content: "\a0";
-    background-color: var(--vads-color-gray-light-alt);
-  }
-
-  &:before {
-    margin-left: -52%;
-    text-align: right;
-  }
-
-  &:after {
-    margin-left: 2%;
-  }
-}
-
-#signin-signup-modal {
-  .va-modal-body {
-    // Overwrite white header color.
-    color: var(--vads-color-base-darker);
-    padding-top: 0;
-    margin-right: 0;
-  }
-
-  &.new-modal-design .va-modal-body {
-    @include media($medium-screen) {
-      padding: 0 9em;
-    }
-  }
-
-  .va-modal-inner {
-    max-width: 62.5rem;
-    width: 95vw;
-  }
-
-  .login {
-    .explanation-content {
-      @include media($medium-screen) {
-        margin-left: 2em;
-      }
-
-      ul {
-        list-style: square;
-        padding-left: 1.5em;
-      }
-
-      p {
-        margin: 1em 0;
-      }
-    }
-  }
-}
-
-#ios-bug ul {
-  list-style: square;
-  padding-left: 1.5em;
-}
-
 #login-root {
-
   .sitewide-search-drop-down-panel-button,
   .sign-in-drop-down-panel-button {
     border-top: none;
@@ -172,9 +79,9 @@ span.sidelines {
   }
 }
 
-.verify,
+/* OCTO Identity */
 .login,
-.transfer-account {
+.verify {
   button {
     display: flex;
     justify-content: center;
@@ -247,62 +154,8 @@ span.sidelines {
     }
   }
 
-  .container {
-    color: var(--vads-color-base);
-    padding: 2em 0;
-  }
-
-  .logo {
-    text-align: center;
-    border-bottom: solid 2px var(--vads-color-gray-light-alt);
-    padding: 1em 0;
-
-    a {
-      &:hover {
-        background-color: transparent;
-      }
-
-      display: inline-block;
-    }
-  }
-
-  .help-info {
-    padding: 2em 0;
-
-    p:first-of-type {
-      margin-top: 0;
-    }
-  }
-}
-
-.verify {
-  button {
-    width: auto;
-
-    &.dslogon {
-      margin-bottom: 0.25em;
-    }
-  }
-
-  h4 + p {
-    margin-top: 0;
-  }
-}
-
-.login,
-.verify {
-  background: var(--vads-color-white);
-
   hr {
     border-color: var(--vads-color-base-lighter);
-  }
-
-  .mobile-explanation {
-    padding: 1em 0;
-
-    p {
-      margin-top: 0;
-    }
   }
 
   .fed-warning {
@@ -320,57 +173,36 @@ span.sidelines {
     }
   }
 
-  .signin-actions-container {
+  .sign-in-wrapper {
+    max-width: 570px;
+  }
+
+  .logo {
     text-align: center;
+    border-bottom: solid 2px var(--vads-color-gray-light-alt);
+    padding: 0 0 1em;
 
-    @include media-maxwidth($small-screen) {
-      margin-right: 0;
+    a {
+      &:hover {
+        background-color: transparent;
+      }
+
+      display: inline-block;
     }
+  }
+}
 
-    div:first-child {
-      background: var(--vads-color-gray-light-alt);
+.verify {
+  button {
+    width: auto;
+
+    &.dslogon {
+      margin-bottom: 0.25em;
     }
+  }
 
-    border: solid 2px var(--vads-color-gray-light-alt);
-
-    .top-banner {
-      text-align: center;
-      display: flex;
-      align-items: center;
-      padding: 0.25em 0;
-      font-style: italic;
-
-      div:first-child {
-        margin: 0 auto;
-      }
-
-      img {
-        height: inherit;
-        vertical-align: baseline;
-        padding: 0 0.25em;
-      }
-    }
-
-    .signin-actions {
-      padding: 2em 2em 1em;
-
-      h5 {
-        margin-top: 0;
-      }
-
-      @include media-maxwidth($small-screen) {
-        padding: 2em 1em 1em;
-      }
-
-      .alternate-signin {
-        padding-top: 1em;
-
-        p:first-of-type {
-          margin-top: 0.5em;
-          color: var(--vads-color-base-darker);
-        }
-      }
-    }
+  h4 + p {
+    margin-top: 0;
   }
 }
 
@@ -395,64 +227,59 @@ span.sidelines {
   }
 }
 
-.sign-in-links {
-  margin-left: 0.625rem;
-}
+.login.login-modal {
+  // temporary solution until DST can fix va-modal large property
+  margin-left: -1rem;
+  margin-right: 4rem;
 
-.sign-in-link {
-  color: inherit !important;
-  text-decoration: none;
-
-  &:hover {
-    color: var(--vads-color-warning) !important;
-    text-decoration: underline;
-  }
-}
-
-.sign-in-spacer {
-  color: var(--vads-color-white);
-  margin: 0 0.6em;
-}
-
-#help-menu {
-  width: 13.125rem;
-}
-
-#create-account a {
-  border-top: 1px solid var(--vads-color-base-light);
-  border-bottom: 1px solid var(--vads-color-base-light);
-  line-height: 100%;
-
-  &:before {
-    top: unset !important;
-  }
-
-  &.logingov {
-    border-bottom: 0;
-  }
-}
-
-.sign-in-wrapper {
   @include media($medium-screen) {
-    max-width: 600px !important;
+    margin-left: unset;
+    margin-right: unset;
+  }
+
+  .downtime-notification.row {
+    margin: 0 0 1em;
+  }
+
+  #mhvH3 {
+    margin-top: unset;
   }
 }
 
-.button-styled-as-link {
-  background-color: transparent;
-  color: var(--vads-color-base);
-  font-weight: normal;
-  padding: unset;
-  margin: unset;
-  display: inline-block;
-  text-align: left;
-  height: 24px;
-  border-radius: 0;
+.login.login-page {
+  #signin-signup-modal-title {
+    margin-top: 2rem !important;
+  }
 
-  &:hover {
-    background-color: rgba(0, 0, 0, 0.05);
-    color: var(--vads-color-base);
-    text-decoration: none;
-    border-bottom: 0;
+  .downtime-notification.row {
+    margin: 0 auto 1em;
+    padding: 0 0.5rem;
+
+    @include media($medium-screen) {
+      padding: unset;
+    }
+  }
+
+  .fed-warning--v2 {
+    @include media($medium-screen) {
+      margin-left: 0.25rem;
+    }
   }
 }
+
+#ios-bug ul {
+  list-style: square;
+  padding-left: 1.5em;
+}
+
+// DO NOT REMOVE without OCTO Identity
+.merger:has(va-modal#signin-signup-modal.open) {
+  overflow-y: hidden;
+}
+
+.merger:has(.login.login-page) .header #legacy-header,
+.merger:has(.login.login-page) #header-default #legacy-header {
+  height: 137.19px;
+  min-height: 137.19px;
+}
+// DO NOT REMOVE without OCTO Identity
