Added contact info section to review page

--- a/src/applications/_mock-form-ae-design-patterns/sass/custom.scss
+++ b/src/applications/_mock-form-ae-design-patterns/sass/custom.scss
@@ -1,6 +1,6 @@
 // hacky fix for address save button sizing
 [data-action="save-edit"] {
-  line-height: .9;
+  line-height: 0.9;
   padding: 0.75rem 1.25rem;
 }
 
@@ -10,14 +10,14 @@
   min-width: 100%;
 }
 
-.nav-tabs li{
+.nav-tabs li {
   flex: 1 1 auto;
 }
 
 [data-location="2/task-blue/veteran-information/edit-home-phone"] {
-.schemaform-first-field {
-  margin-top: 1.875rem !important;
-}
+  .schemaform-first-field {
+    margin-top: 1.875rem !important;
+  }
 }
 
 .contact-info-card {
@@ -28,7 +28,6 @@
     &.gray-task {
       height: unset;
     }
-
   }
   &:nth-of-type(4) {
     @include media($medium-screen) {
@@ -39,6 +38,10 @@
 
 #form-26-1880 {
   margin-top: 2rem;
+
+  .schemaform-chapter-progress {
+    padding-left: 0;
+  }
 }
 
 div.progress-box.progress-box-schemaform > div.form-panel > div > va-card {
@@ -46,7 +49,7 @@ div.progress-box.progress-box-schemaform > div.form-panel > div > va-card {
 }
 
 [data-dd-action-name="street"] {
-margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 // custom styles for the dev panel stdout
 .fade-enter {
