Updates for intro page

--- a/src/applications/mhv-supply-reordering/sass/mhv-supply-reordering.scss
+++ b/src/applications/mhv-supply-reordering/sass/mhv-supply-reordering.scss
@@ -4,3 +4,8 @@
 @import "~@department-of-veterans-affairs/css-library/dist/stylesheets/modules/m-modal";
 @import "~@department-of-veterans-affairs/css-library/dist/stylesheets/modules/m-omb-info";
 @import "../../../platform/forms/sass/m-form-confirmation";
+@import "~@department-of-veterans-affairs/formation/sass/shared-variables";
+
+.mhv-c-reorder-unavail-card {
+    max-width: 320px;
+}
