swaps usa-alert-error

--- a/src/platform/landing-pages/dev-template.ejs
+++ b/src/platform/landing-pages/dev-template.ejs
@@ -204,6 +204,7 @@
                   <span class="static-widget-content vads-u-display--none" aria-hidden="true">
                   </span>
                   <div class="usa-alert usa-alert-error sip-application-error vads-u-display--none" aria-hidden="true">
+                    <va-icon icon="error" size={3} className="vads-u-color--error"/> 
                     <div class="usa-alert-body">
                       <strong>We&#x2019;re sorry. Something went wrong when we tried to load the
                         search widget.</strong><br>Please try refreshing your browser in a few
