Fixed padding left of save your application message on edit mailing address page

--- a/src/applications/_mock-form-ae-design-patterns/sass/custom.scss
+++ b/src/applications/_mock-form-ae-design-patterns/sass/custom.scss
@@ -20,7 +20,7 @@
 }
 }
 
-[data-location="2/task-blue/veteran-details"], [data-location="2/task-blue/veteran-information"] {
+[data-location="2/task-blue/veteran-details"], [data-location="2/task-blue/veteran-information"], [data-location="2/task-blue/veteran-information/edit-mailing-address"]{
 .schemaform-chapter-progress {
 padding-left: 0;
 }
