hardcode rem values in grid for now
Signed-off-by: Micah Chiang <micahkchiang@gmail.com>

--- a/src/platform/site-wide/sass/v1-grid.scss
+++ b/src/platform/site-wide/sass/v1-grid.scss
@@ -44,10 +44,10 @@ $breakpoints: (
 }
 
 .vads-l-grid-container {
-  @include padding(null $site-margins-mobile);
+  @include padding(null 0.9375rem);
 
   @include media($medium-screen) {
-    @include padding(null $site-margins);
+    @include padding(null 1.875rem);
   }
 }
 
