--- a/src/platform/site-wide/sass/style.scss
+++ b/src/platform/site-wide/sass/style.scss
@@ -2,6 +2,7 @@ $formation-image-path: "~@department-of-veterans-affairs/formation/assets/img";
 
 @import "modules/m-overrides";
 
+@import "~@department-of-veterans-affairs/css-library/dist/stylesheets/override-function";
 @import "~@department-of-veterans-affairs/css-library/dist/stylesheets/formation-overrides/variables";
 @import "~@department-of-veterans-affairs/css-library/dist/tokens/scss/variables";
 @import "~@department-of-veterans-affairs/css-library/dist/stylesheets/core";
