Add components helpers and tests for travel claim UI

--- a/src/applications/vaos/appointment-list/sass/styles.scss
+++ b/src/applications/vaos/appointment-list/sass/styles.scss
@@ -299,3 +299,7 @@ div[id^="vaos-appts__detail-"] {
 .icon-width {
   min-width: 32px !important;
 }
+
+.action-link-below-text {
+  margin-left: 2rem;
+}
