--- a/src/applications/static-pages/homepage-email-signup/email-signup.scss
+++ b/src/applications/static-pages/homepage-email-signup/email-signup.scss
@@ -1,8 +1,15 @@
-.veteran-banner-container {
-  max-width: 1280px;
-  margin: 0 auto;
-}
+.homepage-email-update-wrapper {
+  .veteran-banner-container {
+    max-width: 80rem;
+    margin: 0 auto;
+  }
 
-.homepage-email-input::part(form-header) {
-  font-size: 1.25rem;
+  .homepage-email-input::part(form-header) {
+    font-size: 1.25rem;
+  }
+
+  form {
+    margin: 0 auto;
+    width: 25rem;
+  }
 }
