Started adding prefill alerts & uneditable data examples to post study review page

--- a/src/applications/_mock-form-ae-design-patterns/sass/custom.scss
+++ b/src/applications/_mock-form-ae-design-patterns/sass/custom.scss
@@ -87,3 +87,14 @@ div.progress-box.progress-box-schemaform > div.form-panel > div > va-card {
     }
   }
 }
+
+// post study page
+#locked-card {
+  width: 21rem;
+}
+
+#gray-locked-card {
+  width: 23rem;
+}
+
+
