Simplify to just the form and not the veteran banner

--- a/src/applications/static-pages/homepage-email-signup/email-signup.scss
+++ b/src/applications/static-pages/homepage-email-signup/email-signup.scss
@@ -1,9 +1,4 @@
-.homepage-email-update-wrapper {
-  .veteran-banner-container {
-    max-width: 80rem;
-    margin: 0 auto;
-  }
-
+#email-signup-form {
   .homepage-email-input::part(form-header) {
     font-size: 1.25rem;
   }
