--- a/src/applications/vaos/new-appointment/sass/styles.scss
+++ b/src/applications/vaos/new-appointment/sass/styles.scss
@@ -12,6 +12,26 @@
   margin-top: 0;
 }
 
+.vaos-form__radio-field, .vaos-form__radio-field-descriptive {
+  va-radio {
+    max-width: none;
+  }
+  va-radio::part(legend) {
+    max-width: none;
+    margin-bottom: 0;
+  }
+}
+
+.vaos-form__radio-field-descriptive {
+  input[type="radio"] + label {
+    font-weight: bold;
+    span {
+      font-weight: normal;
+      font-size: var(--base-font-size);
+    }
+  }
+}
+
 .vaos-form__detailed-radio {
   input[type="radio"] + label::before {
     margin-top: 0.6em;
