sign in modal design and logic updates

--- a/src/applications/ask-va/sass/ask-va-too.scss
+++ b/src/applications/ask-va/sass/ask-va-too.scss
@@ -464,3 +464,7 @@ ul.react-tabs__tab-list {
 .search-hint-text {
   color: var(--vads-color-base-dark);
 }
+
+.ask-va-modal-content {
+  margin-bottom: 2rem;
+}
