--- a/src/applications/mhv-medical-records/sass/medical-records.scss
+++ b/src/applications/mhv-medical-records/sass/medical-records.scss
@@ -36,9 +36,6 @@
     margin: 0px !important;
     padding: 0px !important;
   }
-  h1 {
-    font-size: 30;
-  }
   .page-title {
     border: solid 1px var(--vads-color-black);
     padding: 8px 0px;
@@ -60,6 +57,15 @@
   .print-title {
     display: flex;
     flex-wrap: wrap;
+  }
+  .left-align-print {
+    padding-left: 0px !important;
+  }
+  .print-indent {
+    padding-left: 16px !important;
+  }
+  .print-bold {
+    font-weight: 700 !important;
   }
 }
 
