MHV-63902: Margin tweaks

--- a/src/applications/mhv-medical-records/sass/medical-records.scss
+++ b/src/applications/mhv-medical-records/sass/medical-records.scss
@@ -67,6 +67,9 @@
   .print-bold {
     font-weight: 700 !important;
   }
+  .margin-zero-print {
+    margin: 0px !important;
+  }
 }
 
 @media screen {
