1198 - content changes for "Review your contact information" form

--- a/src/applications/personalization/review-information/sass/welcome-va-setup-review-information.scss
+++ b/src/applications/personalization/review-information/sass/welcome-va-setup-review-information.scss
@@ -8,3 +8,9 @@
 .schemaform-sip-save-link {
     display: none;
 }
+#confirmContactInfoHeader {
+  display: none;
+}
+.saved-success-container {
+  display: none !important;
+}
