Add empty string validation to validateConditionName; Revert other unncessary diffs; Add comments

--- a/src/applications/disability-benefits/all-claims/sass/disability-benefits.scss
+++ b/src/applications/disability-benefits/all-claims/sass/disability-benefits.scss
@@ -302,7 +302,7 @@ article[data-location="supporting-evidence/evidence-types-bdd"] {
   margin: 0;
 }
 
-/* autocomplete styles */
+/* addDisabilities autocomplete styles */
 .cc-autocomplete {
   position: relative;
 
