updates to v1-grid to fix breakpoint columns
Signed-off-by: Micah Chiang <micahkchiang@gmail.com>

--- a/src/applications/claims-status/sass/claims-status.scss
+++ b/src/applications/claims-status/sass/claims-status.scss
@@ -146,7 +146,7 @@
     display: block;
     width: fit-content;
     font-size: 1rem;
-    font-family: var(--font-source-sans);
+    font-family: $font-family-sans;
     font-weight: normal;
     line-height: 1.5;
   }
