--- a/src/applications/accredited-representative-portal/sass/accredited-representative-portal.scss
+++ b/src/applications/accredited-representative-portal/sass/accredited-representative-portal.scss
@@ -1,5 +1,4 @@
 @import "~@department-of-veterans-affairs/css-library/dist/tokens/scss/variables";
-@import "../accreditation/21a/sass/21a";
 
 .container {
   display: flex;
@@ -22,3 +21,51 @@
   display: none;
 }
 
+.homepage-hero {
+  &__look-and-feel {
+    background: linear-gradient(
+      to left,
+      var(--vads-color-primary-alt)10%,
+      var(--vads-color-primary-alt-dark) 40%,
+      var(--vads-color-primary-alt-darkest)
+    );
+  }
+}
+
+.arp-full-width-alert {
+  width: 100%;
+
+  &__questions {
+    font-weight: 700;
+  }
+}
+
+.poa-requests-page-table-container {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.limitations-row {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+
+  &__warning-icon {
+    color: var(--vads-color-action-focus-on-light);
+  }
+}
+
+.relationship-row {
+  display: block;
+  font-size: 14px;
+  line-height: 1;
+}
+
+.arp-full-width-alert {
+  width: 100%;
+
+  &__questions {
+    font-weight: 700;
+  }
+}
