--- a/src/applications/static-pages/homepage-email-signup/email-signup.scss
+++ b/src/applications/static-pages/homepage-email-signup/email-signup.scss
@@ -1,4 +1,10 @@
+@import "~@department-of-veterans-affairs/css-library/dist/stylesheets/mixins";
+
 #email-signup-form {
+  @media screen and (min-width: 32rem) {
+    min-width: 30rem;
+  }
+
   .homepage-email-input::part(form-header) {
     font-size: 1.25rem;
   }
