updating learn more button to va

--- a/src/applications/gi/sass/gi.scss
+++ b/src/applications/gi/sass/gi.scss
@@ -119,10 +119,23 @@
   .learn-more-button {
     background-image: none !important;
     font-weight: inherit !important;
+  }
+  .learn-more-btn::part(button) {
+    background-color: transparent;
+    color: var(--vads-color-primary);
+    border: none;
+    outline: none;
+    font-weight: normal;
+    text-decoration: underline;
+    padding: 0;
+    margin-right: 0;
+  }
+  .learn-more-bold-text::part(button){
+    font-weight: bold;
 
   }
 
-  .remove-btn::part(button){
+  .remove-btn::part(button) {
     background-color: transparent;
     color: var(--vads-color-primary);
     border: none;
@@ -305,6 +318,6 @@
   list-style: none;
   padding-left: 0;
 }
-.inst-remove-btn::part(button){
+.inst-remove-btn::part(button) {
   background-color: transparent;
 }
