fix gov banner display on mobile
Signed-off-by: Micah Chiang <micahkchiang@gmail.com>

--- a/src/applications/proxy-rewrite/sass/style-consolidated.scss
+++ b/src/applications/proxy-rewrite/sass/style-consolidated.scss
@@ -864,6 +864,14 @@
     }
   }
 
+  .banner-display--none {
+    display: none !important;
+  }
+
+  .banner-display--flex {
+    display: flex !important;
+  }
+
   .va-notice--banner {
     margin: 0;
     background: #f0f0f0;
