Fix for improperly terminated component tag.

--- a/src/platform/landing-pages/dev-template.ejs
+++ b/src/platform/landing-pages/dev-template.ejs
@@ -160,7 +160,7 @@
     </header>
 
     <% if (includeBreadcrumbs) { %>
-      <va-breadcrumbs class="row" wrapping />
+      <va-breadcrumbs class="row" wrapping></va-breadcrumbs>
       <script type="text/javascript">
         // Get list of breadcrumbs
         const breadcrumbsJSON = JSON.parse('<%= JSON.stringify(breadcrumbs_override) %>');
